--- a/six.html
+++ b/six.html
@@ -12,39 +12,7 @@
 
 <body>
 
-    <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-        <a class="navbar-brand" href="#"></a>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
-            aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarNavDropdown">
-            <ul class="navbar-nav">
-                <li class="nav-item active">
-                    <a class="nav-link" href="index.html">Portfolio<span class="sr-only">(current)</span></a>
-                </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
-                        aria-haspopup="true" aria-expanded="false">
-                        Individual Projects
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
-                        <a class="dropdown-item" href="six.html">The SIX wives quiz</a>
-                        <a class="dropdown-item" href="life.html">Conway's Game of Life</a>
-                        <a class="dropdown-item" href="social-site.html">HappyFun Social Data Site!</a>
-                        <a class="dropdown-item" href="calculator.html">Calculator</a>
-                        <a class="dropdown-item" href="caesar.html">The Caesar Cipher Page</a>
-                        <a class="dropdown-item" href="game.html">The Slightly Ominous Castle of Toska Sorann</a>
-                        <a class="dropdown-item" href="theatre.html">My Theatre Website</a>
-                        <a class="dropdown-item" href="bee.html">The Bee and Kitten Repository</a>
-                        <a class="dropdown-item" href="unix-page.html">GitHub and Unix Information Page</a>
-                    </div>
-
-                </li>
-
-            </ul>
-        </div>
-    </nav>
+    <div id="nav-placeholder"></div>
 
     <div class="container-fluid">
         <h1>The SIX Wives Quiz</h1>
