--- a/unix-page.html
+++ b/unix-page.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Tim Norwood, Programmer - Calculator</title>
+    <title>Tim Norwood, Programmer - GitHub and Unix Information Page</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
@@ -15,33 +15,30 @@
     <div id="nav-placeholder"></div>
 
     <div class="container-fluid">
-        <h1>Calculator</h1>
-        <p>Calculator is a simple calculator, created using React.</p>
+        <h1>GitHub and Unix Information Page</h1>
+        <p>My first ever HTML project: a page about GitHub and Unix.</p>
         <div>
-            <img src="calculator.jpg" class="resize rounded mx-auto d-block"
-                alt="A simple on-screen calculator, with blue buttons.">
+            <img src="unix-page.jpg" class="resize rounded mx-auto d-block"
+                alt="Screenshot of a simple web page, containing a picture of a kitten and text.">
         </div>
         <br>
         <p>
-            My new challenges in creating the Calculator were:
+            My new challenges in creating the GitHub and Unix Information Page were:
         <ol>
-            <li>Getting to grips with React; this was my first React project.</li>
-
-            <li>The importance of testing! It wasn't until I showed an early version to a couple of friends that they spotted I'd missed out a 0 button.</li>
-
             <li>
-                Making it so that when the user clicks multiple number buttons, the calculator recognises them as a single number with multiple digits. 
-                This required concatenating the numbers into a list, and then outputting the list as a float.
-            </li>
-            <li>
-
+                Getting to grips with HTML; it was my first HTML project.
             </li>
         </ol>
 
+        <br>
+        I didn't really have the HTML knowledge to implement interesting design decisions for this project.
+        To make a pretty dry page slightly more interesting and colourful, I included the picture of the GitHub mascot.
+        </p>
+
         <div class="big-text">
-            <a href="https://tmnrwd.github.io/calculator/" target="_blank">Use the Calculator</a>
+            <a href="https://tmnrwd.github.io/unix-github-info/" target="_blank">View the GitHub and Unix Information Page</a>
             <br>
-            <a href="https://github.com/tmnrwd/calculator" target="_blank">View the Calculator GitHub repository</a>
+            <a href="https://github.com/tmnrwd/unix-github-info" target="_blank">View the GitHub and Unix Information Page GitHub repository</a>
         </div>
     </div>
 
