--- a/theatre.html
+++ b/theatre.html
@@ -5,6 +5,12 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     <title>Tim Norwood, Programmer - My Theatre Portfolio</title>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+    <script>
+      $.get("navigation.html", function (data) {
+        $("#nav-placeholder").replaceWith(data);
+      });
+    </script>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="index.css">
@@ -13,7 +19,7 @@
 <body>
 
     <div id="nav-placeholder"></div>
-    
+
     <div class="container-fluid">
         <h1>My Theatre Portfolio</h1>
         <p>My first project created with CSS and Bootstrap, this is a simple portfolio to display some of the projects I've done in my
