proofread, heading font

--- a/bee.html
+++ b/bee.html
@@ -22,8 +22,8 @@
 
     <div class="container-fluid">
         <h1>The Bee and Kitten Repository</h1>
-        <p>A page with a deliberately DIY aesthetic, containing kittens, facts about bees, and quotes. Created with HTML
-            and Flexbox.</p>
+        <p>A page inspired by the early days of the internet, when geocities and angelfire stalked the web. 
+            Comes with a deliberately DIY aesthetic, containing kittens, facts about bees, and quotes. Created with HTML and Flexbox.</p>
         <div>
             <img src="bee.jpg" class="resize rounded mx-auto d-block"
                 alt="Screenshot of a simple web page, containing a picture of a kitten and text.">
