--- a/caesar.html
+++ b/caesar.html
@@ -32,7 +32,7 @@
             My new challenge in creating the Caesar Cipher Page was:
         <ol>
             <!-- <li>Getting the choice of direction to work.</li> -->
-            <li>Avoiding entries that how up as "not a number".</li>
+            <li>Avoiding entries that show up as "not a number".</li>
             </ol>
 
         <br>
@@ -43,7 +43,7 @@
             The user has to be able to choose whether they want to shift the letters in their message to the left or right (the shift direction), and by how much (the shift number). My basic approach was to convert the letters to the corresponding number in the alphabet (A = 1, B = 2, and so on), change the numbers by the specified amount (adding 3 to each number if the user chooses a shift to the right of 3), and then converting numbers back to letters.
         </li>
         <li>
-            The issue was that the user choosing a left shift still resulted in addition of the numbers in the second step (a right shift).
+            I did really struggle with this, but I can't remember why or how I solved it. Oh well.
         </li>
         <li>
             
