--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 <body>
   <div id="nav-placeholder"></div>
   <div class="text-center">
-    <h1>TIM NORWOOD</h1>
+    <h1 class="very-big-text" id="index-heading">TIM NORWOOD</h1>
     <h2>Student Portfolio</h2>
   </div>
 
@@ -86,7 +86,7 @@
 
       <div class="col-md-5 border borders rounded projects m-2">
         <div class="thumbnail">
-          <a href="calculator.jpg">
+          <a href="calculator.html">
             <img src="calculator.jpg" class="thumbnails w-100 h-100 m-1"
               alt="A simple on-screen calculator, with blue buttons.">
             <div class="caption">
@@ -146,8 +146,8 @@
               alt="Screenshot of a simple web page, containing a picture of a kitten and text.">
             <div class="caption">
               <p>
-              <h4>The Bee and Kitten Repository</h4><br>A page with a deliberately DIY aesthetic, containing kittens,
-              facts about bees, and quotes. Created with HTML and Flexbox.</p>
+              <h4>The Bee and Kitten Repository</h4><br>A page inspired by the early days of the internet, when geocities and angelfire stalked the web. 
+              Comes with a deliberately DIY aesthetic, containing kittens, facts about bees, and quotes. Created with HTML and Flexbox.</p>
             </div>
           </a>
         </div>
@@ -155,7 +155,7 @@
 
       <div class="col-md-5 border borders rounded projects m-2">
         <div class="thumbnail">
-          <a href="unix.html">
+          <a href="unix-page.html">
             <img src="unix-page.jpg" class="thumbnails w-100 h-100 m-1"
               alt="Screenshot of a simple web page about GitHub and Unix.">
             <div class="caption">
