navbar spacing update

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div id="nav-placeholder" style="background-color: darkorange;"></div>
+  <div id="nav-placeholder" class="nav-placeholder" style="background-color: darkorange;"></div>
   <div class="text-center">
     <h1 class="very-big-text" id="index-heading">TIM NORWOOD</h1>
     <h2>Student Portfolio</h2>
