--- a/life.html
+++ b/life.html
@@ -12,7 +12,7 @@
 
 <body>
 
-    <div id="nav-placeholder"></div>
+    <div id="nav-placeholder" class="nav-placeholder"></div>
 
     <div class="container-fluid">
         <h1>Conway's Game of Life</h1>
