--- a/unix-page.html
+++ b/unix-page.html
@@ -18,7 +18,7 @@
 
 <body>
 
-    <div id="nav-placeholder"></div>
+    <div id="nav-placeholder" class="nav-placeholder"></div>
 
     <div class="container-fluid">
         <h1>GitHub and Unix Information Page</h1>
