--- a/theatre.html
+++ b/theatre.html
@@ -44,7 +44,7 @@
                  A bootstrap navbar at the top of every page allows navigation between pages.
             </li>
             <li>
-                I added a carousel of project images, a short bio, and my latest work, to the homepage to give an immediate flavour for what the website is about. I also embedded my Twitter feed as well, to show that this is a person's website rather than a faceless company's.
+                I added a carousel of project images, a short bio, and my latest work, to the homepage to give an immediate flavour for what the website is about. I also embedded my Twitter feed, to show that this is a person's website rather than a faceless company's.
             </li>
             <li>
                 For the projects page, I included several thumbnail images from each project as well as a description of the project.
