--- a/contact.html
+++ b/contact.html
@@ -4,7 +4,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    <title>Tim Norwood, Programmer - The SIX Wives Quiz</title>
+    <title>Tim Norwood, Programmer - Contact</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script>
       $.get("navigation.html", function (data) {
@@ -31,6 +31,11 @@
         <label>
           Your email:
           <input type="text" name="_replyto">
+        </label>
+        <br>
+        <label>
+          Email subject:
+          <textarea name="subject"></textarea>
         </label>
         <br>
         <label>
