layout, style improvements

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 </head>
 
 <body>
-  <div id="nav-placeholder" class="nav-placeholder" style="background-color: darkorange;"></div>
+  <div id="nav-placeholder" class="nav-placeholder"></div>
   <div class="text-center">
     <h1 class="very-big-text" id="index-heading">TIM NORWOOD</h1>
     <h2>Student Portfolio</h2>
@@ -30,13 +30,15 @@
 
 
   <div class="container-fluid">
-    <h3>Projects</h3>
+    <h3 class="text-center">Projects</h3>
     <br>
     <h4>Highlights</h4>
     <br>
-    <div class="row">
+    <div class="row mx-auto">
 
-      <div class="col-md-5 border borders rounded projects m-2">
+      <div class="col-md-1"></div>
+
+      <div class="col border borders rounded projects m-2" >
         <div class="thumbnail">
           <a href="six.html">
             <img src="six.jpg" class="thumbnails w-100 h-100 m-1"
@@ -50,7 +52,9 @@
         </div>
       </div>
 
-      <div class="col-md-5 border borders rounded projects m-2">
+      <div class="col-md-1"></div>
+
+      <div class="col border borders rounded projects m-2">
         <div class="thumbnail">
           <a href="life.html">
             <img class="thumbnails w-100 h-100 m-1" src="life.jpg"
@@ -63,13 +67,18 @@
           </a>
         </div>
       </div>
+
+      <div class="col-md-1"></div>
+
+
     </div>
     <br>
+
     <h4>All Projects</h4>
     <br>
     <div class="row">
 
-      <div class="col-md-5 border borders rounded projects m-2">
+      <div class="col border borders rounded projects m-2">
         <div class="thumbnail">
           <a href="social-site.html">
             <img src="social-site.jpg" class="thumbnails w-100 h-100 m-1"
@@ -84,7 +93,7 @@
         </div>
       </div>
 
-      <div class="col-md-5 border borders rounded projects m-2">
+      <div class="col border borders rounded projects m-2">
         <div class="thumbnail">
           <a href="calculator.html">
             <img src="calculator.jpg" class="thumbnails w-100 h-100 m-1"
@@ -97,7 +106,7 @@
         </div>
       </div>
 
-      <div class="col-md-5 border borders rounded projects m-2">
+      <div class="col border borders rounded projects m-2">
         <div class="thumbnail">
           <a href="caesar.html">
             <img src="caesar.jpg" class="thumbnails w-100 h-100 m-1"
@@ -111,7 +120,7 @@
         </div>
       </div>
 
-      <div class="col-md-5 border borders rounded projects m-2">
+      <div class="col border borders rounded projects m-2">
         <div class="thumbnail">
           <a href="game.html">
             <img src="game.jpg" class="thumbnails w-100 h-100 m-1"
@@ -124,8 +133,10 @@
           </a>
         </div>
       </div>
+    </div>
+    <div class="row">
 
-      <div class="col-md-5 border borders rounded projects m-2">
+      <div class="col border borders rounded projects m-2">
         <div class="thumbnail">
           <a href="theatre.html">
             <img src="theatre.jpg" class="thumbnails w-100 h-100 m-1"
@@ -139,21 +150,23 @@
         </div>
       </div>
 
-      <div class="col-md-5 border borders rounded projects m-2">
+      <div class="col border borders rounded projects m-2">
         <div class="thumbnail">
           <a href="bee.html">
             <img src="bee.jpg" class="thumbnails w-100 h-100 m-1"
               alt="Screenshot of a simple web page, containing a picture of a kitten and text.">
             <div class="caption">
               <p>
-              <h4>The Bee and Kitten Repository</h4><br>A page inspired by the early days of the internet, when geocities and angelfire stalked the web. 
-              Comes with a deliberately DIY aesthetic, containing kittens, facts about bees, and quotes. Created with HTML and Flexbox.</p>
+              <h4>The Bee and Kitten Repository</h4><br>A page inspired by the early days of the internet, when
+              geocities and angelfire stalked the web.
+              Comes with a deliberately DIY aesthetic, containing kittens, facts about bees, and quotes. Created with
+              HTML and Flexbox.</p>
             </div>
           </a>
         </div>
       </div>
 
-      <div class="col-md-5 border borders rounded projects m-2">
+      <div class="col border borders rounded projects m-2">
         <div class="thumbnail">
           <a href="unix-page.html">
             <img src="unix-page.jpg" class="thumbnails w-100 h-100 m-1"
@@ -168,6 +181,7 @@
 
     </div>
   </div>
+</div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
