--- a/navigation.html
+++ b/navigation.html
@@ -26,7 +26,7 @@
             <a class="dropdown-item" href="unix-page.html">GitHub and Unix Information Page</a>
           </div>
         <li class="nav-item">
-          <a class="nav-link" href="contact.html">Contact Me</a>
+          <a class="nav-link" href="contact.html">Contact</a>
         </li>
 
         </li>
