update to blog pile

--- a/index.html
+++ b/index.html
@@ -38,14 +38,13 @@
 
       <div class="col-md-1"></div>
 
-      <div class="col border borders rounded projects m-2" >
+      <div class="col border borders rounded projects m-2">
         <div class="thumbnail">
           <a href="six.html">
             <img src="six.jpg" class="thumbnails w-100 h-100 m-1"
               alt="Six young women in glamorous faux-Regency costumes pose on stage with microphones as Henry VIII's six wives, in the musical SIX.">
             <div class="caption">
-              <p>
-              <h4>The SIX wives quiz</h4><br>An homage to old-school internet quizzes, where transparently obvious
+              <p><h4>The SIX Wives Quiz</h4><br>An homage to old-school internet quizzes, where transparently obvious
               answers meet scrolling captions. Created with Javascript and styled with CSS.</p>
             </div>
           </a>
@@ -56,13 +55,13 @@
 
       <div class="col border borders rounded projects m-2">
         <div class="thumbnail">
-          <a href="life.html">
-            <img class="thumbnails w-100 h-100 m-1" src="life.jpg"
-              alt="Conway's Game of Life: a grid of green, black, and white cells on a white background.">
+          <a href="blogpile.html">
+            <img src="blogpile.jpg" class="thumbnails w-100 h-100 m-1"
+              alt="A blogging app, titled The Blog Pile, with a pink-and-black colour scheme. The post reads: Dear Diary; Date: 9/30/2020; I had a dream about a weasel with a french birad! omg!!; Tags: dream weasel hair. There are buttons, labelled Edit - make changes in editing form below; Delete.">
             <div class="caption">
               <p>
-              <h4>Conway's Game of Life</h4><br>After creating the core function with test-driven development, I made
-              this small implementation of the game using Object-Oriented Programming in Javascript.</p>
+              <h4>The Blog Pile</h4>
+              <p>The Blog Pile is a blogging app, created using React, linked to an API created using Express, and a Mongo database.</p>
             </div>
           </a>
         </div>
@@ -80,14 +79,76 @@
 
       <div class="col border borders rounded projects m-2">
         <div class="thumbnail">
-          <a href="social-site.html">
-            <img src="social-site.jpg" class="thumbnails w-100 h-100 m-1"
-              alt="A social networking website, in an orange and black colour scheme.">
+          <a href="blogpile.html">
+            <img src="blogpile.jpg" class="thumbnails w-100 h-100 m-1"
+              alt="A blogging app, titled The Blog Pile, with a pink-and-black colour scheme. The post reads: Dear Diary; Date: 9/30/2020; I had a dream about a weasel with a french birad! omg!!; Tags: dream weasel hair. There are buttons, labelled Edit - make changes in editing form below; Delete.">
             <div class="caption">
               <p>
-              <h4>HappyFun Social Data Site!</h4><br>The front end of a social networking site, designed to answer the
-              question: what if these sites were clear about what they get out of the deal? Created using React and
-              React Bootstrap.</p>
+              <h4>The Blog Pile</h4>
+              <p>The Blog Pile is a blogging app, created using React, linked to an API created using Express, and a Mongo database.</p>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col border borders rounded projects m-2">
+        <div class="thumbnail">
+          <a href="weather.html">
+            <img src="weather.jpg" class="thumbnails w-100 h-100 m-1"
+              alt="A simple weather forecasting app. Cards represent the forecast for different days; each card bears informaton and a weather icon.">
+            <div class="caption">
+              <p>
+              <h4>Forecasting the Weather</h4>
+              <p>Forecasting the Weather is a simple weather app, created using React. It draws its data from the
+                OpenWeather API.</p>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col border borders rounded projects m-2">
+        <div class="thumbnail">
+          <a href="book-list.html">
+            <img src="book-list.jpg" class="thumbnails w-100 h-100 m-1"
+              alt="A book listing app. The list of books is one entry long. The entry reads: ID: 99; Title: Aether in the Blood; Author: Tim Norwood; Read: Read. Below, there are sections labelled Book Search and Add Book to List.">
+            <div class="caption">
+              <p>
+              <h4>The Book List</h4>
+              <p>The Book List is a book listing app, created using React, linked to an API created using Express.</p>
+            </div>
+          </a>
+        </div>
+      </div>
+
+      <div class="col border borders rounded projects m-2">
+        <div class="thumbnail">
+          <a href="event-list.html">
+            <img src="event-list.jpg" class="thumbnails w-100 h-100 m-1"
+              alt="An event listing app. The list of events is one entry long. The entry reads: Name: Complain about the weather; Location: UK; Precis: Let's have a cup of tea and complain about the weather. Below, there is a section labelled Add Event to List.">
+            <div class="caption">
+              <p>
+              <h4>The Event List</h4>
+              <p>The Event List is an event listing app, created using React, linked to an API created using Express,
+                and a Mongo database.</p>
+            </div>
+          </a>
+        </div>
+      </div>
+
+
+    </div>
+
+    <div class="row">
+
+      <div class="col border borders rounded projects m-2">
+        <div class="thumbnail">
+          <a href="book-list.html">
+            <img src="book-list.jpg" class="thumbnails w-100 h-100 m-1"
+              alt="A book listing app. The list of books is one entry long. The entry reads: ID: 99; Title: Aether in the Blood; Author: Tim Norwood; Read: Read. Below, there are sections labelled Book Search and Add Book to List.">
+            <div class="caption">
+              <p>
+              <h4>HappyFun Social Data Site!</h4><br>The Book List is a book listing app, created using React, linked to
+              an API created using Express.</p>
             </div>
           </a>
         </div>
@@ -105,6 +166,20 @@
           </a>
         </div>
       </div>
+
+      <div class="col border borders rounded projects m-2">
+        <div class="thumbnail">
+          <a href="life.html">
+            <img class="thumbnails w-100 h-100 m-1" src="life.jpg"
+              alt="Conway's Game of Life: a grid of green, black, and white cells on a white background.">
+            <div class="caption">
+              <p><h4>Conway's Game of Life</h4><br>After creating the core function with test-driven development, I made
+              this small implementation of the game using Object-Oriented Programming in Javascript.</p>
+            </div>
+          </a>
+        </div>
+      </div>
+
 
       <div class="col border borders rounded projects m-2">
         <div class="thumbnail">
@@ -135,6 +210,19 @@
       </div>
     </div>
     <div class="row">
+
+      <div class="col border borders rounded projects m-2">
+        <div class="thumbnail">
+          <a href="six.html">
+            <img src="six.jpg" class="thumbnails w-100 h-100 m-1"
+              alt="Six young women in glamorous faux-Regency costumes pose on stage with microphones as Henry VIII's six wives, in the musical SIX.">
+            <div class="caption">
+              <p><h4>The SIX Wives Quiz</h4><br>An homage to old-school internet quizzes, where transparently obvious
+              answers meet scrolling captions. Created with Javascript and styled with CSS.</p>
+            </div>
+          </a>
+        </div>
+      </div>
 
       <div class="col border borders rounded projects m-2">
         <div class="thumbnail">
@@ -181,7 +269,7 @@
 
     </div>
   </div>
-</div>
+  </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js"
     integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n"
