--- a/navigation.html
+++ b/navigation.html
@@ -12,7 +12,7 @@
         <li class="nav-item dropdown">
           <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
             aria-haspopup="true" aria-expanded="false">
-            Individual Projects
+            Beginner's Projects
           </a>
           <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
             <a class="dropdown-item" href="six.html">The SIX Wives Quiz</a>
@@ -25,6 +25,17 @@
             <a class="dropdown-item" href="bee.html">The Bee and Kitten Repository</a>
             <a class="dropdown-item" href="unix-page.html">GitHub and Unix Information Page</a>
           </div>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" id="navbarDropdownMenuLink" data-toggle="dropdown"
+              aria-haspopup="true" aria-expanded="false">
+              Intermediate Projects
+            </a>
+            <div class="dropdown-menu" aria-labelledby="navbarDropdownMenuLink">
+              <a class="dropdown-item" href="weather.html">Forecasting the Weather</a>
+              <a class="dropdown-item" href="book-list.html">The Book List</a>
+              <a class="dropdown-item" href="event-list.html">The Event List</a>
+              <a class="dropdown-item" href="blogpile.html">The Blog Pile</a>
+            </div>
         <li class="nav-item">
           <a class="nav-link" href="contact.html">Contact Me</a>
         </li>
