update index description

--- a/index.html
+++ b/index.html
@@ -25,8 +25,14 @@
   </div>
 
   <div class="text-center m-1">
-    <p>Hello! I'm Tim Norwood, and I'm learning to code through a bootcamp with The Developer Academy.
-      This portfolio contains the projects I've completed so far.</p>
+    <p>Hello! I'm Tim Norwood, a software engineer.
+      This portfolio contains the student projects I created when I was learning to code.
+      I've deactivated some of them because of security issues that have arisen in packages since I created them.
+    </p>
+    <p>
+      For professional enquiries, I'm reachable through <a href="www.linkedin.com/in/tim-norwood-45449156
+      ">LinkedIn</a>.
+    </p>
   </div>
 
 
